fixed the emoji picker inside the thread component and on smaller screen sizes, the reaction bar also got an update that doesn't put every reaction in a single column on small screen sizes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,3 +76,13 @@ emoji-picker ::-webkit-scrollbar-thumb {
   border-radius: 30px;
   border: 2px solid white;
 }
+
+@media (max-width: 640px) {
+  emoji-picker {
+    width: 260px;
+    height: 250px;
+    --emoji-size: 1rem;
+    --emoji-padding: 0.5rem;
+    --num-columns: 6;
+  }
+}
